Changed all colors from dark-theme to light-theme

--- a/webots/index.html
+++ b/webots/index.html
@@ -16,7 +16,7 @@
     <link type="text/css" rel="stylesheet" href="ide.css" />
   </head>
   <body>
-    <div id="container" class="fullscreen dark-theme">
+    <div id="container" class="fullscreen">
       <div id="layout-container"></div>
     </div>
     <div id="hidden-panels" style="display: none;">
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <table id="spinner-container"  class="fullscreen dark-theme">
+    <table id="spinner-container"  class="fullscreen">
       <tbody>
         <tr>
           <td class="align-middle text-center">
@@ -105,7 +105,7 @@
     <script src="ide.js" type="text/javascript"></script>
 
     <script src="ajax.js" type="text/javascript"></script>
-    
+
     <script>
     $(document).ready(function () {
       IDE.init();
