--- a/editor/index.html
+++ b/editor/index.html
@@ -100,7 +100,7 @@
     <script src="translations.js" type="text/javascript" ></script>
     <script src="i18n.js" type="text/javascript" ></script>
     <script src="XML.js" type="text/javascript"></script>
-    <script src="blocks2ast.js" type="text/javascript"></script>
+    <script src="blocks2py.js" type="text/javascript"></script>
     <script src="blocks.js" type="text/javascript"></script>
     <script src="ide.js" type="text/javascript"></script>
 
