--- a/editor/index.html
+++ b/editor/index.html
@@ -14,6 +14,9 @@
     <link type="text/css" rel="stylesheet" href="libs/goldenlayout-1.5.9/goldenlayout-base.css" />
     <link type="text/css" rel="stylesheet" href="libs/goldenlayout-1.5.9/goldenlayout-light-theme.css" />
     <link type="text/css" rel="stylesheet" href="ide.css" />
+
+    <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   </head>
   <body>
     <div id="container" class="fullscreen">
@@ -81,6 +84,7 @@
 
     <!-- JQuery/Popper/Bootstrap -->
     <script src="libs/jquery/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript"> jQuery = $ = module.exports </script>
     <script src="libs/jquery.serializeJSON/jquery.serializejson.min.js" type="text/javascript"></script>
     <script src="libs/bootstrap-4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
