--- a/editor/index.html
+++ b/editor/index.html
@@ -17,6 +17,31 @@
   </head>
   <body>
     <div id="container" class="fullscreen">
+      <div id="top-bar">
+        <div class="row align-items-center">
+          <div class="col-auto">
+            <h2>
+              <span>Roboliga</span><span>Virtual</span><span>2020</span>
+            </h2>
+          </div>
+          <div class="col-3">
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text">Nombre del robot:</div>
+              </div>
+              <input type="text" class="form-control" id="robot-name">
+            </div>
+          </div>
+          <div class="col">
+            <div class="input-group mb-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text">Escribir código en:</div>
+              </div>
+              <input type="text" class="form-control" id="output-path">
+            </div>
+          </div>
+        </div>
+      </div>
       <div id="layout-container"></div>
     </div>
     <div id="hidden-panels" style="display: none;">
