Disabled the output-path text input by default

--- a/editor/index.html
+++ b/editor/index.html
@@ -37,7 +37,7 @@
               <div class="input-group-prepend">
                 <div class="input-group-text">Escribir código en:</div>
               </div>
-              <input type="text" class="form-control" id="output-path">
+              <input type="text" class="form-control" id="output-path" disabled>
             </div>
           </div>
         </div>
