Fixed error when running server-mode

--- a/editor/index.html
+++ b/editor/index.html
@@ -109,7 +109,7 @@
 
     <!-- JQuery/Popper/Bootstrap -->
     <script src="libs/jquery/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <script type="text/javascript"> jQuery = $ = module.exports </script>
+    <script type="text/javascript"> if (typeof module != "undefined") { jQuery = $ = module.exports; } </script>
     <script src="libs/jquery.serializeJSON/jquery.serializejson.min.js" type="text/javascript"></script>
     <script src="libs/bootstrap-4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
