Added top-bar buttons

--- a/editor/index.html
+++ b/editor/index.html
@@ -27,6 +27,22 @@
               <span>Roboliga</span><span>Virtual</span><span>2020</span>
             </h2>
           </div>
+          <div class="col-auto">
+            <div class="btn-group mb-2" role="toolbar" aria-label="...">
+              <button id="new-button" type="button" class="btn btn-info">
+                <i class="fas fa-file mr-1"></i>
+                <span lang="en">New...</span>
+              </button>
+              <button id="open-button" type="button" class="btn btn-info">
+                <i class="fas fa-folder-open mr-1"></i>
+                <span lang="en">Open...</span>
+              </button>
+              <button id="save-button" type="button" class="btn btn-info">
+                <i class="fas fa-save mr-1"></i>
+                <span lang="en">Save as...</span>
+              </button>
+            </div>
+          </div>
           <div class="col-3">
             <div class="input-group mb-2">
               <div class="input-group-prepend">
