--- a/editor/index.html
+++ b/editor/index.html
@@ -23,9 +23,7 @@
       <div id="top-bar">
         <div class="row align-items-center">
           <div class="col-auto">
-            <h2>
-              <span>Roboliga</span><span>Virtual</span><span>2020</span>
-            </h2>
+            <img src="roboliga.png" />
           </div>
           <div class="col-auto">
             <div class="btn-group mb-2" role="toolbar" aria-label="...">
